--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,7 @@ PyMySQL==0.9.3
 python-dateutil==2.8.1
 requests==2.23.0
 s3transfer==0.3.3
+selenium==3.141.0
 six==1.15.0
 urllib3==1.25.9
+watchtower==0.8.0
